--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h3>{{title}}</h3>
+<app-nav></app-nav>
 
-<ul>
-  <!-- userName & id , must be writen as recieved in request , it's case sensitive -->
-  <li *ngFor="let user of users" >{{user.id}} -- {{user.userName}}</li> 
-</ul>
+<div class="container" style="margin-top: 100px;">
+
+</div>
+<app-home></app-home>
