--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,6 +19,9 @@
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/errors" routerLinkActive="active">errors</a>
+      </li>
     </ul>
 
     <div *ngIf="(accountService.currentUser$ |async) as user" class="dropdown" dropdown>
